style/site.css
/*
color schemes from nora's article:
purple #a64ac9
yellow #fccd04
tan #ffb48f
white #f5e6cc

color scheme from enby flag on deviantart
yellow (icterine)--#fff77b
purple (purpureus)--#945da1
light yellow--#ffffdb
oxford blue--#000026
grey (jet)--#373737
*/

:root {
  --about-me-bg: repeating-linear-gradient(45deg,
    #fff77b, #fff77b 15px,
    gold 15px, gold 30px);
/*light color--easy to read?*/
/*  --hire-me-bg: repeating-linear-gradient(45deg,
    #ffffdb, #ffffdb 15px,
    thistle 15px, thistle 30px);*/
  --hire-me-bg: repeating-linear-gradient(45deg,
    #000026, #000026 15px,
    #945da1 15px, #945da1 30px);
  --contact-me-bg: repeating-linear-gradient(45deg,
    #373737, #373737 15px,
    DarkSlateGrey 15px, DarkSlateGrey 30px);
/*  display: block;*/
}

html {
  display: grid;
  scroll-behavior: smooth;
}
body {
  background-color: #ffffdb;
  font-size: 100%;

}
a {
  text-decoration: none;
  color: black;
}
nav {
  /*background-color: thistle;*/
  display: grid;
  grid-template-rows: 1fr;
  grid-column-gap: 5px;
  grid-template-columns: 1fr 1fr 1fr;
  text-align: center;
  color: black;
}
nav > a {
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: dodgerblue;
  opacity: 0.5;
}
nav > a:hover {
  opacity: 1.0;
}
h6 {
  font-size: 120%;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 16px;
  background-attachment: fixed;
}
#aboutMe{
  background: var(--about-me-bg);
  background-attachment: fixed;
}
.hireMe{
  display: grid;
/*  grid-template-rows: 1fr auto auto;
  grid-template-columns: auto auto auto;
*/  /*grid-template-areas: 1 / 1 / 3 / 3;*/
}
#hireMe{
  background: var(--hire-me-bg);
  background-attachment: fixed;
  color: snow;
  /*grid-area: 1 / 1 / 3 / 1;*/
}
#contactMe{
  background: var(--contact-me-bg);
  background-attachment: fixed;
  color: snow;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

